--- a/src/main/docs/guide/config.adoc
+++ b/src/main/docs/guide/config.adoc
@@ -15,12 +15,12 @@ It is possible to configure multiple connections to the same server, different s
 nats:
     server1:
       addresses:
-        - nats://localhost:4222
+        - "nats://localhost:4222"
       username: guest
       password: guest
     server2:
       addresses:
-        - nats://randomServer:4222
+        - "nats://randomServer:4222"
       username: guest
       password: guest
 ----
@@ -32,8 +32,8 @@ Nats also supports a fail over connection strategy where the first server that c
 ----
 nats:
     addresses:
-      - nats://localhost:4222
-      - nats://randomServer:4222
+      - "nats://localhost:4222"
+      - "nats://randomServer:4222"
     username: guest
     password: guest
 ----
