--- a/src/main/docs/guide/quickStart.adoc
+++ b/src/main/docs/guide/quickStart.adoc
@@ -4,7 +4,7 @@ dependency:micronaut-nats[groupId="io.micronaut.nats"]
 
 === Configuring NATS
 
-NOTE: Without any configuration the defaults in the link:{apinats}/{natsVersion}/io/nats/client/Options.html[Options] will be used.
+NOTE: Without any configuration the defaults in the link:{apinats}{natsVersion}/io/nats/client/Options.html[Options] will be used.
 
 It is possible to configure multiple connections to the same server, different servers, or a single connection to one of a list of servers.
 
