adds java-examples

--- a/src/main/docs/guide/quickStart.adoc
+++ b/src/main/docs/guide/quickStart.adoc
@@ -8,22 +8,7 @@ To create a NATS `Producer` that sends messages you can simply define an interfa
 
 For example the following is a trivial `@NatsClient` interface:
 
-.ProductClient.java
-[source,java]
-----
-import io.micronaut.nats.annotation.NatsClient;
-import io.micronaut.nats.annotation.Subject;
-import io.micronaut.messaging.annotation.MessageBody;
-
-@NatsClient // <1>
-public interface ProductClient {
-
-    @Subject("my-products") // <2>
-    void send(String name);
-
-    void sendProduct(@Subject String brand, @MessageBody String name); // <3>
-}
-----
+snippet::io.micronaut.nats.docs.quickstart.ProductClient[tags="imports,clazz", project-base="docs-examples/example]
 
 <1> The ann:nats.annotation.NatsClient[] annotation is used to designate this interface as a client
 <2> The ann:nats.annotation.Subject[] annotation indicates which subject the `Message` should be published to
@@ -31,12 +16,7 @@ public interface ProductClient {
 
 At compile time Micronaut will produce an implementation of the above interface. You can retrieve an instance of `ProductClient` either by looking up the bean from the api:context.ApplicationContext[] or by injecting the bean with `@Inject`:
 
-.Using ProductClient
-[source,groovy]
-----
-ProductClient client = applicationContext.getBean(ProductClient.class);
-client.sendProduct("Nike", "Blue Trainers");
-----
+snippet::io.micronaut.nats.docs.quickstart.QuickstartSpec[tags="producer"] project-base="docs-examples/example]
 
 
 === Creating a NATS Consumer with @NatsListener
@@ -45,22 +25,7 @@ To listen to NATS messages you can use the ann:nats.annotation.NatsListener[] an
 
 The following example will listen for messages published by the `ProductClient` in the previous section:
 
-.ProductListener.java
-[source,java]
-----
-import io.micronaut.messaging.annotation.MessageBody;
-import io.micronaut.nats.annotation.NatsListener;
-import io.micronaut.nats.annotation.Subject;
-
-@NatsListener // <1>
-public class ProductListener {
-
-    @Subject("my-products") // <2>
-    public void receive(@MessageBody String name) { // <3>
-        System.out.println("Got Product - " + name);
-    }
-}
-----
+snippet::io.micronaut.nats.docs.quickstart.ProductListener[tags="imports,clazz"] project-base="docs-examples/example]
 
 <1> The ann:nats.annotation.NatsListener[] is used to designate this class as a listener.
 <2> The ann:nats.annotation.Subject[] annotation is again used to indicate which subject to subscribe to.
