fixes invalid project-base for documentation snippets

--- a/src/main/docs/guide/consumer/consumerMethods/consumerParameters/consumerTypes.adoc
+++ b/src/main/docs/guide/consumer/consumerMethods/consumerParameters/consumerTypes.adoc
@@ -2,6 +2,6 @@ Arguments can also be bound based on their type. Several types are supported by 
 
 There is only type that is supported for retrieving data about the link:{apinats}{natsVersion}/io/nats/client/Message.html[Message].
 
-snippet::io.micronaut.nats.docs.consumer.types.ProductListener[tags="imports,clazz", project-base="docs-examples/example]
+snippet::io.micronaut.nats.docs.consumer.types.ProductListener[tags="imports,clazz", project-base="docs-examples/example"]
 
 <1> The arguments are bound from the link:{apinats}{natsVersion}/io/nats/client/Message.html[Message].
