--- a/src/main/docs/guide/rpc.adoc
+++ b/src/main/docs/guide/rpc.adoc
@@ -6,7 +6,7 @@ The following is an example direct reply to where the consumer is converting the
 
 The "client side" in this case starts by publishing a message. A consumer somewhere will then receive the message and reply with a new value.
 
-snippet::io.micronaut.nats.docs.rpc.ProductClient[tags="imports,clazz", project-base="docs-examples/example]
+snippet::io.micronaut.nats.docs.rpc.ProductClient[tags="imports,clazz", project-base="docs-examples/example"]
 
 <1> The send method is blocking and will return when the response is received.
 <2> The sendReactive method returns a reactive type that will complete when the response is received. Reactive methods will be executed on the IO thread pool.
@@ -17,7 +17,7 @@ IMPORTANT: In order for the publisher to assume RPC should be used instead of ju
 
 The "server side" in this case starts with the consumption of a message, and then a new message is published by returning the result
 
-snippet::io.micronaut.nats.docs.rpc.ProductListener[tags="imports,clazz", project-base="docs-examples/example]
+snippet::io.micronaut.nats.docs.rpc.ProductListener[tags="imports,clazz", project-base="docs-examples/example"]
 
 <1> The data from message is injected.
 <2> The converted message is returned.
