--- a/src/main/docs/guide/producer/producerMethods/producerParameters.adoc
+++ b/src/main/docs/guide/producer/producerMethods/producerParameters.adoc
@@ -1,1 +1,1 @@
-All options are available to be set for publishing messages. The link:{apinats}{natsVersion}/io/nats/client/Connection.html#publish-io.nats.client.Message-[publish] method is used by the api:configuration.nats.intercept.NatsIntroductionAdvice[] to publish messages and all arguments can be set through annotations or method arguments.
+All options are available to be set for publishing messages. The link:{apinats}/io/nats/client/Connection.html#publish-io.nats.client.Message-[publish] method is used by the api:configuration.nats.intercept.NatsIntroductionAdvice[] to publish messages and all arguments can be set through annotations or method arguments.
